4.9.4
-----
release: ???

- Enable or disable Finagle tracing from the admin http interface.
- Fix PeriodicBackgroundProcess to delay up to a second, preventing it
  from running at the 59th second of a minute by accident.
- Add more histogram buckets, to track metrics > 1M.


4.9.3
-----
release: 22 September 2011

- Add 'removeCounter'. [gphat]


4.9.2
-----
release: 13 September 2011

- Fix logic to find the jar when it's in the current folder.


4.9.1
-----
release: 7 September 2011

- Fix a few small bugs in the "/graph/" system of the admin server.


4.9.0
-----
release: 29 August 2011

- Add 'statsFilters' and "?filtered=1" to the stats command on the admin
  port.


4.8.3
-----
release: 12 August 2011

- Allow a BackgroundProcess to ask not to be interrupted.
- Allow a BackgroundProcess to be stopped without joining its underlying
  thread.


4.8.2
-----
Changes:

- supports configuration which StatsCollection to report for a given AdminHttpService


4.8.0
-----
release: 8 August 2011

- Histogram improvements (used for percentiles)
    Use 3x more buckets
    getPercentile/minimum/maximum now returns midpoint of bucket, not
     upper boundary
    With the above two changes, getPercentile/minimum/maximum return
      an estimated value within 5% of the actual value.  Before, the
      estimated values was up to 23% higher than the actual value.
    Fix: getPercentile(0.0) now returns the minimum (was 0)
    Fix: minimum of a histogram containing only infinity is infinity


4.7.3
-----
release: 20 July 2011

- Include file descriptor statistics


4.7.2
-----
release: 14 July 2011

- [OBSERVE-289] Support both namespaced and period-latched stats listeners on
  the admin service.


4.7.1
-----
release: 12 July 2011

- [OBSERVE-286] Fix LatchedStatsListener to update values once per period.


4.7.0
-----
release: 11 July 2011

- Fix LatchedStatsListener caching so that a new listener is not created for