@@ -1,8 +1,8 @@
 #Project properties
-#Thu Sep 22 12:37:34 PDT 2011
+#Mon Oct 17 16:27:47 PDT 2011
 project.organization=com.twitter
 project.name=ostrich
 sbt.version=0.7.4
-project.version=4.9.4-SNAPSHOT
+project.version=4.9.5-SNAPSHOT
 build.scala.versions=2.8.1
 project.initialize=false
